// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// ------- 用于扩展option --------
import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  string message_tag = 75000001;
  string message_map = 75000002;
}

extend google.protobuf.MethodOptions {
  string method_cmd = 76000001;
  string method_uri = 76000002;
  string method_dir = 76000003;
}
// --------------------------------

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  option (message_tag) = "json";
  repeated Xtangle list = 1;
  repeated string  names = 2;
  int64  page = 3;
  int64  size = 4;
}

message Xtangle {
  option (message_tag) = "json";
  int64  id = 1;          // id
	string name = 2;        // 名称
}
